kubernetes/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/part-of: devops-hello-kubernetes
    app.kubernetes.io/component: monitoring
